--- a/assets/css/templatemo-scholar.css
+++ b/assets/css/templatemo-scholar.css
@@ -87,6 +87,8 @@ a {
   text-decoration: none !important;
 }
 
+/*font of the headings over here*/
+
 h1, h2, h3, h4, h5, h6 {
   color: #1e1e1e;
   margin-top: 0px;
@@ -120,12 +122,12 @@ body {
 }
 
 ::selection {
-  background: #473d7a;
+  background: #7a6ad8;
   color: #fff;
 }
 
 ::-moz-selection {
-  background: #865277;
+  background: #7a6ad8;
   color: #fff;
 }
 
@@ -147,12 +149,12 @@ body {
 }
 
 .section-heading h2 em {
-  color: #473d7a;
+  color: #7a6ad8;
   font-style: normal;
 }
 
 .section-heading h6 {
-  color: #473d7a;
+  color: #7a6ad8;
   font-size: 14px;
   text-transform: uppercase;
   font-weight: 600;
@@ -161,7 +163,7 @@ body {
 .main-button a {
   display: inline-block;
   background-color: #fff;
-  color: #473d7a;
+  color: #7a6ad8;
   font-size: 14px;
   font-weight: 500;
   height: 40px;
@@ -172,7 +174,7 @@ body {
 }
 
 .main-button a:hover {
-  background-color: #473d7a;
+  background-color: #7a6ad8;
   color: #fff;
 }
 
@@ -667,7 +669,7 @@ Banner Style
 */
 
 .main-banner {
-  background-image: url(../images/banner-bg.jpg);
+  background-image: url(../images/purple_BG.png);
   background-position: right bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -678,13 +680,6 @@ Banner Style
   background-image: url(../images/banner-item-01.jpg);
 }
 
-.main-banner .item-2 {
-  background-image: url(../images/banner-item-02.jpg);
-}
-
-.main-banner .item-3 {
-  background-image: url(../images/banner-item-03.jpg);
-}
 
 .main-banner .item {
   background-repeat: no-repeat;
@@ -796,20 +791,20 @@ Banner Style
 
 /* 
 ---------------------------------------------
-Services Style
+Background Style
 --------------------------------------------- 
 */
 
-.services .service-item:hover .icon img {
+.background .service-item:hover .icon img {
   margin-top: -10px;
 }
 
-.services .service-item {
+.background .service-item {
   position: relative;
   margin-top: 95px;
 }
 
-.services .service-item .icon {
+.background .service-item .icon {
   width: 190px;
   height: 190px;
   display: inline-block;
@@ -822,12 +817,12 @@ Services Style
   top: -95px;
 }
 
-.services .service-item .icon img {
+.background .service-item .icon img {
   max-width: 86px;
   transition: all .2s;
 }
 
-.services .service-item .main-content {
+.background .service-item .main-content {
   border-radius: 25px;
   padding: 80px 30px 50px 30px;
   background-color: #f1f0fe;
@@ -836,7 +831,7 @@ Services Style
   transition: all .4s;
 }
 
-.services .service-item h4 {
+.background .service-item h4 {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 15px;
@@ -844,36 +839,23 @@ Services Style
   transition: all .4s;
 }
 
-.services .service-item p {
+.background .service-item p {
   color: #4a4a4a;
   margin-bottom: 25px;
 }
 
 /* 
 ---------------------------------------------
-About Style
+Data Section Style
 --------------------------------------------- 
 */
 
-.about-us {
+.datainfo {
   position: relative;
   padding: 0px;
   margin-top: 130px;
 }
 
-.about-us:before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  width: 84%;
-  height: 100%;
-  background-color: #f1f0fe;
-  content: '';
-  border-top-left-radius: 500px;
-  border-bottom-left-radius: 500px;
-}
 
 .accordion {
   margin-top: -40px;
@@ -936,15 +918,18 @@ h2.accordion-header button {
   color: #4a4a4a;
 }
 
-.about-us .section-heading {
+.datainfo .section-heading {
   margin-left: 60px;
   margin-bottom: 0px;
 }
 
-.about-us .section-heading .main-button {
+.datainfo .section-heading .main-button {
   margin-top: 50px;
 }
 
+.datainfo .section-heading p {
+  color:  #fff;
+}
 
 /* 
 ---------------------------------------------
@@ -956,678 +941,13 @@ Courses Style
   margin-top: 160px;
 }
 
-.event_filter {
-  text-align: center;
+.courses p {
+  color:#fff
 }
 
-.event_filter {
-  background-color: #f1f0fe;
-  border-radius: 50px;
-  padding: 15px 40px;
-  list-style: none;
-  margin: 0 auto 70px;
-  max-width: max-content;
-}
-
-.event_filter li {
-  display: inline-block;
-  margin: 0px 20px;
-}
-
-.event_filter li a {
-  font-size: 14px;
-  font-weight: 500;
-  color: #1e1e1e;
-  transition: all .3s;
-}
-
-.event_filter li
-
-.event_filter li a.is_active,
-.event_filter li a:hover {
-  color: #7a6ad8;
-}
-
-.events_item .thumb {
-  position: relative;
-  border-radius: 25px;
-  overflow: hidden;
-}
-
-.events_item .thumb img {
-  margin-bottom: -5px;
-}
-
-.events_item .thumb span.category {
-  position: absolute;
-  left: 30px;
-  top: 30px;
-  font-size: 14px;
-  text-transform: uppercase;
-  color: #7a6ad8;
-  background-color: rgba(250, 250, 250, 0.95);
-  padding: 8px 20px;
-  border-radius: 25px;
-  font-weight: 500;
-  display: inline-block;
-}
-
-.events_item .thumb span.price {
-  position: absolute;
-  right: -30px;
-  top: -50px;
-  background-color: rgba(122, 106, 216, 0.95);
-  width: 130px;
-  height: 130px;
-  border-radius: 50%;
-  display: inline-block;
-  transition: all .3s;
-}
-
-.events_item .thumb span.price h6 {
-  margin-top: 72px;
-  margin-left: 22px;
-  font-size: 28px;
-  text-transform: uppercase;
-  color: #fff;
-  font-weight: 700;
-}
-
-.events_item .thumb span.price em {
-  font-size: 18px;
-  font-weight: 500;
-  font-style: normal;
-  vertical-align: top;
-}
-
-.events_item {
-  background-color: #f1f0fe;
-  border-radius: 25px;
-  margin-bottom: 30px;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-} 
-
-.events_item .down-content {
-  padding: 20px 30px 25px 30px;
-}
-
-.events_item .down-content span.author {
-  color: #7a6ad8;
-  font-size: 15px;
-  display: inline-block;
-  margin-bottom: 6px;
-}
-
-.events_item .down-content h4 {
-  font-size: 22px;
-  font-weight: 600;
-  transition: all .3s;
-}
-
-.events_item:hover .down-content h4 {
-  color: #7a6ad8;
-}
-
-.events_item:hover .thumb span.price {
-  transform: scale(1.2);
-}
-
-
-/* 
----------------------------------------------
-Facts Style
---------------------------------------------- 
-*/
-
-.fun-facts {
-  position: relative;
-  padding: 120px 0px 80px 0px;
-  overflow: hidden;
-}
-
-.fun-facts:before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-  width: 95%;
-  height: 100%;
-  background-color: #7a6ad8;
-  content: '';
-  border-top-right-radius: 500px;
-  border-bottom-right-radius: 500px;
-}
-
-.fun-facts:after {
-  background: url(../images/contact-dec-01.png);
-  position: absolute;
-  left: 15%;
-  opacity: 0.5;
-  top: 0;
-  width: 318px;
-  height: 119px;
-  content: '';
-  z-index: 2;
-}
-
-.fun-facts .counter {
-  text-align: center;
-  margin-bottom: 40px;
-}
-
-.fun-facts h2 {
-  color: #fff;
-  font-size: 48px;
-  font-weight: 700;
-}
-
-.fun-facts h2::after {
-  content: '+';
-  margin-left: 5px;
-}
-
-.fun-facts p {
-  color: #fff;
-  font-size: 15px;
-  font-weight: 500;
-  margin-top: 15px;
-}
-
-
-/* 
----------------------------------------------
-Team Style
---------------------------------------------- 
-*/
-
-.team {
-  margin-top: 100px;
-    padding-top: 140px;
-}
-
-.team-member {
-  position: relative;
-}
-
-.team-member:hover img {
-  top: -120px;
-}
-
-.team-member img {
-  max-width: 220px;
-  border-radius: 50%;
-  position: absolute;
-  top: -110px;
-  left: 50%;
-  transform: translateX(-110px);
-  transition: all .3s;
-}
-
-.team-member .main-content {
-  border-radius: 25px;
-  padding: 140px 30px 40px 30px;
-  background-color: #f1f0fe;
-  text-align: center;
-}
-
-.team-member .main-content span.category {
-  color: #7a6ad8;
-  font-size: 15px;
-}
-
-.team-member .main-content h4 {
-  font-size: 22px;
-  font-weight: 600;
-  margin-top: 8px;
-  margin-bottom: 15px;
-}
-
-.team-member .main-content ul li {
-  display: inline-block;
-  margin: 0px 2px;
-}
-
-.team-member .main-content ul li a {
-  background-color: #fff;
-  color: #7a6ad8;
-  display: inline-block;
-  text-align: center;
-  line-height: 40px;
-  font-size: 18px;
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  transition: all .3s;
-}
-
-.team-member .main-content ul li a:hover {
-  background-color: #7a6ad8;
-  color: #fff;
-}
-
-
-/* 
----------------------------------------------
-Testimonials Style
---------------------------------------------- 
-*/
-
-.testimonials {
-  position: relative;
-  padding: 80px 0px;
-  margin-top: 150px;
-}
-
-.testimonials:before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  width: 65%;
-  height: 100%;
-  background-color: #f1f0fe;
-  content: '';
-  border-top-left-radius: 500px;
-  border-bottom-left-radius: 500px;
-}
-
-.testimonials .section-heading {
-  margin-bottom: 0px;
-  margin-left: 60px;
-  vertical-align: middle;
-}
-
-.testimonials .section-heading p {
-  margin-top: 50px;
-}
-
-.testimonials .item {
-  background-color: #7a6ad8;
-  border-radius: 25px;
-  padding: 80px;
-}
-
-.testimonials .item p {
-  font-size: 18px;
-  line-height: 40px;
-  color: #fff;
-  font-style: italic;
-  font-weight: 300;
-  margin-bottom: 40px;
-}
-
-.testimonials .item img {
-  border-radius: 50%;
-  max-width: 100px;
-  float: left;
-  margin-right: 25px;
-}
-
-.testimonials .item span {
-  display: inline-block;
-  margin-top: 20px;
-  font-size: 15px;
-  color: #fff;
-}
-
-.testimonials .item h4 {
-  color: #fff;
-  font-size: 22px;
-  font-weight: 600;
-  margin-top: 8px;
-}
-
-.testimonials .owl-nav {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-5px);
-  right: -25px;
-  text-align: right;
-}
-
-.testimonials .owl-nav .owl-prev i,
-.testimonials .owl-nav .owl-next i {
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  font-size: 24px;
-  display: inline-block;
-  color: #7a6ad8;
-  background-color: #fff;
-  border-radius: 50%;
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.10);
-  opacity: 1;
-  transition: all .3s;
-}
-
-.testimonials .owl-nav .owl-prev i {
-  position: absolute;
-  bottom: 65px;
-}
-
-.testimonials .owl-nav .owl-prev i:hover,
-.testimonials .owl-nav .owl-next i:hover {
-  opacity: 1;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
-}
-
-
-/* 
----------------------------------------------
-Events Style
---------------------------------------------- 
-*/
-
-.events .section-heading {
-  margin-bottom: 100px;
-}
-
-.events .item {
-  background-color: #f1f0fe;
-  border-radius: 25px;
-  position: relative;
-  padding: 40px;
-  margin-bottom: 96px;
-}
-
-.events .item .image {
-  position: relative;
-}
-
-.events .item .image img {
-  position: absolute;
-  border-radius: 25px;
-  max-width: 260px;
-  left: 0;
-  top: -70px;
-}
-
-.events .item ul li {
-  display: inline-block;
-  width: 17.5%;
-  vertical-align: middle;
-}
-
-.events .item ul li:first-child {
-  width: 35%;
-}
-
-.events .item ul li:nth-of-type(2) {
-  width: 28%;
-}
-
-.events .item ul li span.category {
-  font-size: 14px;
-  text-transform: uppercase;
-  color: #7a6ad8;
-  background-color: #fff;
-  padding: 8px 20px;
-  border-radius: 25px;
-  font-weight: 500;
-  display: inline-block;
-  margin-bottom: 20px;
-}
-
-.events .item ul li h4 {
-  font-size: 22px;
-  font-weight: 600;
-}
-
-.events .item ul li span {
-  display: inline-block;
-  font-size: 14px;
-  color: #4a4a4a;
-  margin-bottom: 10px;
-}
-
-.events .item ul li h6 {
-  font-size: 16px;
-  color: #7a6ad8;
-  font-weight: 600;
-}
-
-.events .item a {
-  position: absolute;
-  right: 0;
-  top: 22px;
-  background-color: #7a6ad8;
-  width: 60px;
-  height: 120px;
-  display: inline-block;
-  text-align: center;
-  line-height: 120px;
-  font-size: 18px;
-  z-index: 1;
-  color: #fff;
-  border-radius: 60px 0px 0px 60px;
-}
-
-
-/* 
----------------------------------------------
-Contact Style
---------------------------------------------- 
-*/
-
-.contact-us {
-  margin-top: 80px;
-  position: relative;
-  padding: 50px 0px;
-}
-
-.contact-us:before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-  width: 65%;
-  height: 100%;
-  background-color: #f1f0fe;
-  content: '';
-  border-top-right-radius: 500px;
-  border-bottom-right-radius: 500px;
-}
 
 
-.contact-us  .section-heading {
-  margin-right: 110px;
-  margin-bottom: 0px;
-}
-
-.contact-us  .section-heading p {
-  margin-top: 50px;
-}
-
-.contact-us .special-offer {
-  margin-top: 50px;
-  background-color: #fff;
-  border-radius: 25px;
-  padding: 30px 120px;
-  display: inline-block;
-  position: relative;
-}
-
-.contact-us .special-offer span.offer {
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-color: #7a6ad8;
-  width: 80px;
-  padding: 30px 8px;
-  line-height: 25px;
-  height: 120px;
-  border-radius: 15px 60px 60px 15px; 
-  display: inline-block;
-  text-align: center;
-  color: #fff;
-  font-size: 16px;
-  text-transform: uppercase;
-  text-align: left;
-}
-
-.contact-us .special-offer span.offer em {
-  font-size: 28px;
-  font-style: normal;
-  font-weight: 600;
-}
-
-.contact-us .special-offer h6 {
-  font-size: 15px;
-  color: #4a4a4a;
-  text-transform: uppercase;
-  font-weight: 400;
-  margin-bottom: 15px;
-}
-
-.contact-us .special-offer h6 em {
-  font-style: normal;
-  color: #7a6ad8;
-  font-weight: 600;
-}
-
-.contact-us .special-offer h4 {
-  font-size: 22px;
-  font-weight: 600;
-}
-
-.contact-us .special-offer h4 em {
-  font-style: normal;
-  color: #7a6ad8;
-}
-
-.contact-us .special-offer a {
-  position: absolute;
-  right: 30px;
-  top: 35px;
-  width: 50px;
-  height: 50px;
-  display: inline-block;
-  text-align: center;
-  line-height: 50px;
-  background-color: #7a6ad8;
-  color: #fff;
-  border-radius: 50%;
-}
-
-.contact-us .contact-us-content {
-  border-radius: 25px;
-  padding: 80px;
-  background-color: #7a6ad8;
-  position: relative;
-  z-index: 1;
-}
-
-.contact-us .contact-us-content::before {
-  background: url(../images/contact-dec-01.png);
-  position: absolute;
-  left: 50%;
-  transform: translateX(-149px);
-  opacity: 0.5;
-  top: 0;
-  width: 318px;
-  height: 119px;
-  content: '';
-  z-index: 2;
-}
-
-.contact-us .contact-us-content::after {
-  background: url(../images/contact-dec-02.png);
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 183px;
-  height: 149px;
-  content: '';
-  z-index: 2;
-}
-
-#contact-form input {
-  width: 100%;
-  height: 50px;
-  border-radius: 25px;
-  background-color: rgba(249, 235, 255, 0.15);
-  border: none;
-  outline: none;
-  font-weight: 300;
-  padding: 0px 20px;
-  font-size: 14px;
-  color: #fff;
-  margin-bottom: 30px;
-  position: relative;
-  z-index: 3;
-}
-
-#contact-form input::placeholder {
-  color: #fff;
-}
-
-#contact-form textarea {
-  width: 100%;
-  height: 120px;
-  border-radius: 25px;
-  background-color: rgba(249, 235, 255, 0.15);
-  border: none;
-  outline: none;
-  font-weight: 300;
-  padding: 20px;
-  font-size: 14px;
-  color: #fff;
-  margin-bottom: 30px;
-  position: relative;
-  z-index: 3;
-}
-
-#contact-form textarea::placeholder {
-  color: #fff;
-}
 
-#contact-form button {
-  border: none;
-  height: 50px;
-  font-size: 14px;
-  font-weight: 600;
-  background-color: #fff;
-  padding: 0px 25px;
-  border-radius: 25px;
-  color: #7a6ad8;
-  transition: all .4s;
-  position: relative;
-  z-index: 3;
-}
-
-#contact-form button:hover {
-  opacity: 0.8;
-}
-
-.contact-us-content .more-info {
-  text-align: center;
-  background: rgb(85,0,227);
-  background: linear-gradient(90deg, rgba(85,0,227,1) 0%, rgba(198,61,255,1) 100%);
-  border-radius: 0px 0px 23px 23px;
-  padding: 45px 30px 15px 30px;
-}
-
-.contact-us-content .more-info .info-item {
-  text-align: center;
-  margin-bottom: 30px;
-}
-
-.contact-us-content .more-info i {
-  font-size: 32px;
-  color: #fff;
-  margin-bottom: 15px;
-}
-
-.contact-us-content .more-info h4 a {
-  color: #fff;
-  font-size: 16px;
-  font-weight: 400;
-}
 
 /* 
 ---------------------------------------------
@@ -1662,18 +982,6 @@ footer p a:hover {
   opacity: 0.75;
 }
 
-footer::before {
-  background: url(../images/contact-dec-01.png);
-  position: absolute;
-  left: 30px;
-  transform: rotate(180deg);
-  opacity: 1;
-  bottom: 0;
-  width: 318px;
-  height: 119px;
-  content: '';
-  z-index: 2;
-}
 
 /* 
 ---------------------------------------------
@@ -1764,132 +1072,8 @@ body {
   .accordion {
     padding: 40px 25px 10px 25px;
   }
-  .services .service-item .icon {
-    width: 170px;
-    height: 170px;
-    line-height: 170px;
-  }
-  .about-us .section-heading {
-    margin-left: 0px;
-    margin-top: 120px;
-  }
-  .about-us::before,
-  .testimonials::before,
-  .contact-us::before {
-    display: none;
-  }
-  .about-us .section-heading p,
-  .testimonials .section-heading p,
-  .contact-us .section-heading p {
-    margin-top: 30px;
-  }
-  .about-us .section-heading .main-button {
-    margin-top: 30px;
-  }
-  .about-us .main-button a {
-    background-color: #7a6ad8;
-    color: #fff;
-  }
-  .courses {
-    margin-top: 100px;
-  }
-  .event_filter ul li {
-    display: block;
-    margin: 12px 5px;
-  }
-  .fun-facts {
-    margin-top: 70px;
-  }
-  .fun-facts::before {
-    width: 95%;
-  }
-  .team {
-    margin-top: 160px;
-  }
-  .team-member {
-    margin-bottom: 140px;
-  }
-  .testimonials {
-    margin-top: -50px;
-    padding: 0px;
-  }
-  .testimonials .section-heading {
-    margin-left: 0px;
-    margin-top: 40px;
-  }
-  .testimonials .item {
-    padding: 40px 40px 60px 40px;
-  }
-  .testimonials .item h4 {
-    font-size: 17px;
-  }
-  .testimonials .item img {
-    margin-right: 15px;
-  }
-  .testimonials .owl-nav {
-    display: none;
-  }
-  .events {
-    margin-top: 80px;
-  }
-  .events .item {
-    margin-bottom: 66px;
-  }
-  .events .item .image img {
-    position: relative;
-    max-width: 100%;
-  }
-  .events .item ul {
-    margin-top: -40px;
-  }
-  .events .item ul li:first-child {
-    width: 100% !important;
-    margin-bottom: 30px;
-    padding-bottom: 30px;
-    border-bottom: 1px solid #ddd;
-  }
-  .events .item ul li:nth-child(2) {
-    width: 40% !important;
-  }
-  .events .item ul li {
-    display: inline-block;
-    width: 28% !important;
-  }
-  .events .item ul li:last-child {
-    text-align: right;
-  }
-  .events .item a {
-    bottom: 150px;
-    top: auto;
-  }
-  .events .item ul li h6 {
-    font-size: 14px;
-  }
-  .contact-us {
-    padding-top: 20px;
-  }
-  .contact-us .section-heading {
-    margin-right: 0px;
-  }
-  .contact-us .special-offer {
-    background-color: #f1f0fe;
-    margin-bottom: 60px;
-    padding: 34px 30px 34px 100px;
-    width: 100%;
-  }
-  .contact-us .special-offer h4 {
-    font-size: 17px;
-  }
-  .contact-us .special-offer a {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    top: 15px;
-    right: 15px;
-  }
-  .contact-us .contact-us-content {
-    padding: 30px;
-  }
+
+
   footer {
     margin-top: 30px;
   }
@@ -1901,8 +1085,5 @@ body {
   }
   .header-area .main-nav .nav li.has-sub:after {
     right: 15px;
-  }
-  .fun-facts:before {
-    width: 95%;
   }
 }
