--- a/assets/css/my_design.css
+++ b/assets/css/my_design.css
@@ -14,10 +14,9 @@ Table of contents
 03. global styles
 04. header
 05. banner
-06. features
-07. testimonials
-08. contact
-09. footer
+06. data section
+07. findings
+08. footer
 
 --------------------------------------------- */
 /* 
